added some prompts